--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <nav class="navbar d-flex justify-content-between align-items-center">
           <a href="javascript:void(0)" class="logo">Classic</a>
-          <ul class="d-flex">
+          <ul class="d-none d-lg-flex">
             <li><a href="javascript:void(0)">Home</a></li>
             <li><a href="javascript:void(0)">About</a></li>
             <li><a href="javascript:void(0)">Blog</a></li>
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-3">
+          <div class="col-12 col-md-6 col-lg-3">
             <div class="card">
               <img src="./images/intro-1.jpg" alt="" />
               <div class="card-content">
@@ -69,7 +69,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-12 col-md-6 col-lg-3">
             <div class="card">
               <img src="./images/intro-1.jpg" alt="" />
               <div class="card-content">
@@ -82,7 +82,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-12 col-md-6 col-lg-3">
             <div class="card">
               <img src="./images/intro-1.jpg" alt="" />
               <div class="card-content">
@@ -95,7 +95,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-12 col-md-6 col-lg-3">
             <div class="card">
               <img src="./images/intro-1.jpg" alt="" />
               <div class="card-content">
@@ -116,7 +116,7 @@
     <section class="blog">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <h2>Pellentesque fermentum mauris et posuere</h2>
             <p>
               Vivamus accumsan blandit ligula. Sed lobortis efficitur sapien
@@ -140,9 +140,9 @@
             </p>
             <a href="javascript:void(0)" class="btn">READ MORE</a>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <div class="row">
-              <div class="col-6">
+              <div class="col-12 col-lg-6">
                 <div class="blog-content">
                   <h3>Categories</h3>
                   <ul>
@@ -168,7 +168,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-12 col-lg-6">
                 <div class="blog-content">
                   <h3>Useful Links</h3>
                   <ul>
